# ApplicationServerWorkspace

./: .cproject  .gdbinit  .gitignore  .project  .travis.yml  CMakeLists.txt  commit.bat  commit.sh  pull.bat  pull.sh
HERP.AuthorizationModule.Client.data/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
HERP.AuthorizationModule.Client.dataService/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
cmake/: GitUtils.cmake
debug/: helper.py  qt_printers_gdb.py
gtest/: CMakeLists.txt.in
